see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini file cs-CZ
 
26-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini file ru-RU
 
25-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini file nl-NL
 # *SEF issue when using article button in multilanguage. Thanks Christophe
 
25-Mar-2012 Christophe Demko
 # [#28284] System messages included in cached pages
 # [#28268] Update MooTools to 1.4.5 (Rouven Weßling)
 # [#28286] Fix @since tags for 2.5.4. Code style in CMS libraries. (Rouven Weßling)

23-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini file sq-IQ
 
23-Mar-2012 Christophe Demko
  # [#28175] *Calendar readonly="true" status prevents loading custom calendars.
  # [#28277] Wrong 'category' tag in category feed

22-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini files cbq-IQ, de-DE, sv-SE
 # [#28280] Regression in the com_installer warnings. Thanks Rouven
 # [#28154] RSS feed of com_finder throws fatal error. Thanks Elijah.
 # [#28266] Sql error generated in menus. Thanks Sudhi
 # [#28265] Fix use of deprecated API in com_installer. Thanks Rouven

21-Mar-2012 Jean-Marie Simonet
 $ Updating installation ini files af-ZA, ar-AA, az-AZ, bg-BG, hr-HR, ro-RO
 $ Updating installation ini files fi-FI, bs-BA
 $ Updating installation ini files th-TH, uk-UA

19-Mar-2012 Mark Dexter
 # [#28269] *Protected extensions can be disabled through the toolbar
 # Fix JSession::checkToken() to be forward compatible with Joomla 3.0
 ^ [#28026] Add option to show full CMS version number in generator tag